gcc/testsuite/c-c++-common/cilk-plus/PS/for2.c
/* { dg-do compile } */
/* { dg-options "-O3 -fcilkplus" } */

#pragma simd		/* { dg-error "must be inside a function" } */

void foo()
{
}
